// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as disabled 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#999",
      "borderRadius": 4,
      "paddingBottom": 16,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#02181a",
        "fontFamily": "Red Hat Display",
        "textAlign": "center",
      }
    }
  >
    Snapshot
  </Text>
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#40c1bb",
      "borderColor": "#0d5459",
      "borderRadius": 4,
      "borderWidth": 2,
      "opacity": 1,
      "paddingBottom": 16,
      "paddingLeft": 32,
      "paddingRight": 32,
      "paddingTop": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#0d5459",
        "fontFamily": "Red Hat Display",
        "textAlign": "center",
      }
    }
  >
    Snapshot
  </Text>
</View>
`;
